minor spacing fixes

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -28,8 +28,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-self: auto;
-  padding-top: 15px;
+  align-self: center;
+  padding-top: 1rem;
   background-color: #e8e8ff;
 }
 
@@ -229,8 +229,8 @@ ul li:hover ul.cat-dropdown {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    align-self: auto;
-    padding-top: 15px;
+    align-self: center;
+    padding-top: 2rem;
     background-color: #e8e8ff;
   }
 
